--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "cross-env PORT=3006 react-scripts start",
