--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.6",
+    "reselect": "^4.0.0",
     "yup": "^0.27.0"
   },
   "scripts": {
