--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "cross-env": "^5.2.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
+    "react-device-detect": "^1.7.5",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
+    "react-dnd-touch-backend": "^9.3.4",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
@@ -19,7 +23,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "cross-env PORT=3006 react-scripts start",
+    "start": "cross-env PORT=3006 HOST=10.108.9.192 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
