--- a/package.json
+++ b/package.json
@@ -2,29 +2,38 @@
   "name": "redux-form-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lrvch.github.io/redux-form-test",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.3.1",
     "cross-env": "^5.2.1",
+    "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
+    "prismjs": "^1.17.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-device-detect": "^1.7.5",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
     "react-dnd-touch-backend": "^9.3.4",
     "react-dom": "^16.9.0",
+    "react-prism": "^4.3.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.6",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "yup": "^0.27.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "cross-env PORT=3006 HOST=10.108.9.192 react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env REACT_APP_GH_PAGES=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
