--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "cross-env PORT=3006 HOST=10.108.9.192 react-scripts start",
+    "start": "cross-env PORT=3006 react-scripts start",
     "build": "cross-env REACT_APP_GH_PAGES=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
